--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1,20 +1,20 @@
 \documentclass[11pt,largemargins]{h2wp}
 
 \newcommand{\eventclass}{ریاضیات گسسته}
-\newcommand{\eventtype}{افکار سازگار نوشتار نابکار}
+\newcommand{\eventtype}{افکار سازگار ، نوشتار نابکار}
 \newcommand{\eventcntrbs}{سودابه محمدهاشمی - کیمیا محمدطاهری}
 
 \begin{document}
 \maketitle
 
-هرگاه نویسنده‌ای توانایی درست نوشتن را نداشته باشد در انتقال صحیح تراوشات فکری خود به خواننده ناکام می‌ماند. نوشتار در خصوص مباحث علم ریاضیات گسسته نیز علاوه بر درک درست از مفاهیم، نیاز به دانش «صحیح نوشتن» و روش به تحریر درآوردن مسائل و اثبات ها دارد تا بتواند هدف انتقال بی کم و کاست به خواننده را کسب نماید.
+هرگاه نویسنده‌ای توانایی درست نوشتن را نداشته باشد در انتقال صحیح تراوشات فکری خود به خواننده ناکام می‌ماند. نوشتار در خصوص مباحث علم ریاضیات گسسته نیز علاوه بر درک درست از مفاهیم، نیاز به دانش «صحیح نوشتن» و روش به تحریر درآوردن مسائل و اثبات‌ها دارد تا بتواند هدف انتقال بی‌ کم و کاست به خواننده را کسب نماید.
 
-چیزی که واقعا اهمیت دارد این است که با درست نوشتن، خواننده درک صحیحی از راه و روش حل مسائل و اثبات ها كسب كند و توانایی درک و خلاقیت در کشف روش‌های حل مسائل را در خود ارتقاء بخشد.
-در بیشتر مواقع اثبات مسائل آسان و منطق حل مسائل بسیار دست یافتنی به نظر می آید ولی در واقع در زمان نوشتن حل مسائل و اثبات ها رویکرد اشتباهی را پیش می گیریم.
-به همین خاطر است که ما نیاز داریم یاد بگیریم كه چگونه اثبات ها را دنبال کنیم.
+چیزی که واقعا اهمیت دارد این است که با درست نوشتن، خواننده درک صحیحی از راه و روش حل مسائل و اثبات‌ها كسب كند و توانایی درک و خلاقیت در کشف روش‌های حل مسائل را در خود ارتقاء بخشد.
+در بیشتر مواقع اثبات مسائل آسان و منطق حل مسائل بسیار دست یافتنی به نظر می‌آید ولی در واقع در زمان نوشتن حل مسائل و اثبات‌ها رویکرد اشتباهی را پیش می‌گیریم.
+به همین خاطر است که ما نیاز داریم یاد بگیریم كه چگونه اثبات‌ها را دنبال کنیم.
 
-هر چند كه رعایت حداقل معیارهای درست نویسی و پیشبرد مرحله به مرحله ی حل مسائل و اثبات ها با استدلال های منطقی، خیال ما را نسبت به درست و معتبر بودن نوشته ی خود راحت می نماید ولی مطالعه ی متون فنی و تعمق در نوشتارهای غنیِ ما را به مرحله ای از بلوغ در نویسندگی می رساند كه علاوه بر رسیدن به بهترین نتیجه ی ممكن، ما را در انتقال صحیح معنا و مفهوم و درك صحیح نوشته بسیار موفق می سازد
-و در نهایت زمانی که فرا بگیریم، چگونه با اتكا به استدلال های درست اثباتمان را کامل کنیم، به فهم عمیق تری از مسائل میرسیم.
+هر چند كه رعایت حداقل معیارهای درست نویسی و پیشبرد مرحله به مرحله‌ی حل مسائل و اثبات‌ها با استدلال‌های منطقی، خیال ما را نسبت به درست و معتبر بودن نوشته‌ی خود راحت می‌نماید ولی مطالعه‌ی متون فنی و تعمق در نوشتارهای غنیِ ما را به مرحله‌ای از بلوغ در نویسندگی می‌رساند كه علاوه بر رسیدن به بهترین نتیجه‌ی ممكن، ما را در انتقال صحیح معنا و مفهوم و درك صحیح نوشته بسیار موفق می‌سازد
+و در نهایت زمانی که فرا بگیریم، چگونه با اتكا به استدلال‌های درست اثباتمان را کامل کنیم، به فهم عمیق‌تری از مسائل می‌رسیم.
 
 پایه و بنیاد درست نویسی بسیار آسان است. تنها کافی است که دقت نماییم تا جملات استفاده شده به یکی از اشکال زیر باشد:
 
@@ -31,22 +31,6 @@
 امید است كه فراگیری نكات «درست نویسی» در تمامی مراحل زندگی راهبر و راهنمای شما باشد.
 
 
-%هر کس که وارد مبحث علم ریاضیات میشود باید توانایی درست خواندن و درک کردن و نوشتن مسائل و اثبات ها را کسب 
-%چیزی که برای ما اهمیت دارد درست نویسی است چرا که درست نوشتن اثبات ها نقش به سزایی در درست خواندن و درک کردن آن ها نیز دارد.
-
-%خیلی از اوقات پیش می آید که اثبات موضوعی بسیار منطقی ب نظر می آید ولی در واقع کاملا اشتباه هست. 
-%به همین خاطر هست که ما نیاز داریم یادبگیریم چگونه اثبات ها را دنبال کنیم.
-%زمانی که اثبات ها را مرحله به مرحله با استدلال های منطقی و درست پیش ببریم میتوانیم از درست بودن و معتبر بودن نتیجه ای که به دست آورده ایم مطمئن باشیم.
-%به علاوه این که در نهایت وقتی یاد بگیریم چگونه استدلال های به جا بیاوریم و اثباتمان را کامل کنیم ، به فهم عمیق تری از ریاضیات و مسائل میرسیم.
-
-%پایه ی درست نویسی ساده است.
-%فقط کافی است که دقت کنیم هر جمله ای که استفاده میکنیم یکی از موارد زیر باشد:
-%۱.فرض مسئله
-%۲.از جمله ی قبلی به طور شفاف نتیجه شده باشد.
-%۳.درستی آن قبلا اثبات شده باشد.
-
-%در این جزوه ما سعی داریم شما را بیشتر با درست نویسی و نکاتی که در این جهت ما را سوق میدهند آشنا کنیم ( تا در نهایت یاد بگیریم در دیگر مراحل زندگی مان هم با منطق باشیم. )
-
 \textbf{انواع نکات}
 
 در این جزوه با سه دسته نکته مواجه هستیم:
@@ -55,9 +39,9 @@
 \item
 دسته $E$: نکات درست نویسی که رعایت نکردن آن باعث ناقص شدن اثبات و در نتیجه کسر نمره می شود.
 \item
-دسته $N$: نکات درست نویسی که رعایت کردن آنها واجب نیست, امابه خوانایی راه حل, ابهام زدایی, پرهیز از تکرار و جلوگیری از خطا کمک می کنند.
+دسته $N$: نکات درست نویسی که رعایت کردن آن‌ها واجب نیست, امابه خوانایی راه حل, ابهام زدایی, پرهیز از تکرار و جلوگیری از خطا کمک می کنند.
 \item
-دسته $T$: دام های آموزشی و خطا های رایج در حل سوالات.
+دسته $T$: دام های آموزشی و خطاهای رایج در حل سوالات.
 
 \end{enumerate}
 \chapter*{شمارش}
@@ -65,12 +49,12 @@
 %% question 1
 
 \question
-سه مهرۀ رخ متمایز و صفحه شطرنجی $8\times8$ داریم. به چند روش می‌توان این سه مهره را در سه خانه از این صفحه قرار داد به طوری که حداقل یک مهره وجود داشته باشد که توسط هیچ مهره ای تهدید نمی شود؟
+سه مهرۀ رخ متمایز و صفحه شطرنجی $8\times8$ داریم. به چند روش می‌توان این سه مهره را در سه خانه از این صفحه قرار داد به طوری که حداقل یک مهره وجود داشته باشد که توسط هیچ مهره‌ای تهدید نمی شود؟
 \solution
   سوال را با اصل متمم حل می کنیم:\\
       -  کل حالات:\\
         \[64\times63\times62\]
-      -  حالات نامطلوب: حالاتی که همه رخ ها تهدید بشوند.\\
+      -  حالات نامطلوب: حالاتی که همه رخ‌ها تهدید بشوند.\\
          رخ اول برای قرار گیری در صفحه شطرنجی 64 حالت دارد, حال چون رخ اول باید تهدید بشود رخ دوم را باید در سطر یا ستون رخ اول قرار بدهیم که ۱۴ حالت دارد. چون رخ سوم هم باید تهدید بشود باید در سطر یا ستون یکی از رخ ها باشد که در مجموع شامل ۶ خانه در سطر یا ستون مشترک دو رخ قبلی و ۱۴ خانه در سطرها یا ستون های غیر مشترک دو رخ است. پس کل حالت ها برابر است با:\\
          \[64\times14\times20\]
 -         حالات مطلوب: طبق اصل متمم برابر است با:
@@ -128,9 +112,9 @@
     \\ 
 \notes
 \Enote{n4}
-عدم تطابق توضیحات با فرمول نوشته شده, انتخاب دو رئیس از میان $n$ نفر $\binom{n}{2}$ حالت دارد نه $n\times(n-1)$ 
+عدم تطابق توضیحات با فرمول نوشته شده, انتخاب دو رئیس از میان $n$ نفر $\binom{n}{2}$ حالت دارد نه $n\times(n-1)$. 
 \Nnote{n5}
-بهتر است روش اثبات (دوگانه شماری)ذکر شود
+بهتر است روش اثبات (دوگانه شماری)ذکر شود.
 \Enote{n6}
 یک طرف دوگانه شماری که نیازمند اثبات است, بدیهی در نظر گرفته شده است.
 \solution*{پاسخ صحیح}
@@ -166,15 +150,15 @@
 
 \Nnote{n7}
 در پاسخ از برهان خلف استفاده شده ولی از آن نام برده نشده است و باید توجه کنیم فرض خلف را حتما بیان کنیم.
-{sec:1}
+
 
 \Nnote{n8}
 باید اصل لانه   کبوتری که از آن استفاده کرده است را نام میبرد و نحوه استفاده از آن مشخص شود.
-{sec:2} 
+
 
 \Tnote{n9}
 پاسخ کامل نیست. پاسخ درست و کامل در پایین آمده است.
-{sec:3}
+
 
 
 \solution*{پاسخ صحیح}
@@ -249,11 +233,10 @@ $ {\textcolor{byzantine}{(E.XI)}}  $
 \notes
 
 \Nnote{n10}
-بهتر است اصل بسط دوجمله ای هم نوشته شود. {sec:1} 
+بهتر است اصل بسط دوجمله ای هم نوشته شود.
 
 \Enote{n11}
-قبل از استفاده از متغیر باید آن را تعریف کرد. تعریف دنباله $a_n$ ضروری است. {sec:2} 		
-
+قبل از استفاده از متغیر باید آن را تعریف کرد. تعریف دنباله $a_n$ ضروری است. 
 
 \solution*{پاسخ صحیح}
 
@@ -291,7 +274,7 @@ $$\binom{16}{12} (4)^{12}$$
      
 \notes
 \Enote{n12}
-تعریف متغیر های $A_i$ ضروری است, چون در غیر این صورت منظور از بقیه استدلال ها به هیج وجه مشخض نیست
+تعریف متغیر های $A_i$ ضروری است, چون در غیر این صورت منظور از بقیه استدلال ها به هیج وجه مشخض نیست.
 \Enote{n13}
 اثبات و یا در صورت وضوح, اشاره به تقارن میان مجموعه ها برای استفاده از اصل شمول و عدم شمول به این شکل ضروری است.
 \solution*{پاسخ صحیح}
@@ -336,10 +319,16 @@ $$\binom{16}{12} (4)^{12}$$
 \solution
 یک زیرمجموعه از این نوع مثلا {۱و۳و۷و۱۰} را انتخاب و نابرابری های اکید 
     $ \\ 0 < 1 < 3 < 7 < 10 < n+1 \\ $ 
-   را در نظر میگیریم. و بررسی میکنیم چند عدد صحیح بین هر دو عدد متوالی از این اعداد وجود دارند. در اینجا ۰ و ۱ و۳ و۲ و n-۱۰ 
-   را به دست می آوریم: ۰ زیرا عددی صحیح بین ۰ و ۱ وجود ندارد و ۱ زیرا تنها عدد ۲ بین ۱ و۳ وجود دارد و ۳ زیرا اعداد صحیح ۴ و۵ و۶ بین ۳ و۷ وجود دارند و ... .
+   را در نظر میگیریم. و بررسی میکنیم چند عدد صحیح بین هر دو عدد متوالی از این اعداد وجود دارند. در اینجا ۰ و ۱ و۳ و
+   \lr{2}
+    و n-۱۰ 
+   را به دست می آوریم: ۰ زیرا عددی صحیح بین
+    \lr{0}
+   و ۱ وجود ندارد و ۱ زیرا تنها عدد ۲ بین ۱ و۳ وجود دارد و
+   \lr{3} 
+   زیرا اعداد صحیح ۴ و۵ و۶ بین ۳ و۷ وجود دارند و ... .
    مجموع این ۵ عدد صحیح برابر
-   $ 0 + 1 + 3 + 2 + n-10 = n-4 $ 
+  \lr{ $ 0 + 1 + 3 + 2 + n-10 = n-4 $} 
      است.
      $ {\textcolor{byzantine}{(E.XIV)}}  $
      
@@ -354,23 +343,23 @@ $$\binom{16}{12} (4)^{12}$$
       میگشتیم پس 
       $ k = n-4 $
       و جواب نهایی برابر است با
-      $\binom{n-3}{n-7} = \binom{n-3}{4} \\ \\ \\   $
+      \lr{$\binom{n-3}{n-7} = \binom{n-3}{4}$} \\ \\ \\ 
   
-  
+ 
       
 \notes
 
 \Enote{n14}
-  مثال زدن باید به صورتی باشد که حذف آن اختلالی در فهم جواب ایجاد نکند . در اینجا اگر مثال پاراگراف اول را حذف کنیم مشخص نیست تابع مولد برچه اساسی نوشته شده است. پس باید توضیحی درمورد تابع مولد و جمله ای که به دنبال ضریب آن هستیم بدهیم {sec:1} 
+  مثال زدن باید به صورتی باشد که حذف آن اختلالی در فهم جواب ایجاد نکند . در اینجا اگر مثال پاراگراف اول را حذف کنیم مشخص نیست تابع مولد برچه اساسی نوشته شده است. پس باید توضیحی درمورد تابع مولد و جمله ای که به دنبال ضریب آن هستیم بدهیم .
 		
 \Enote{n15}
-     نیاز هست که کاملا گفته شود چه تغییر متغیری انجام میشود . در اینجا تغییر متغیر $ k \rightarrow {k+3} $   را داریم.  همیشه به هنگام تغییر متغیر توجه کنیم ممکن است کران ها تغییر کنند. در اینجا کران پایین از صفر به سه میرود. {sec:2} 
+     نیاز هست که کاملا گفته شود چه تغییر متغیری انجام میشود . در اینجا تغییر متغیر $ k \rightarrow {k+3} $   را داریم.  همیشه به هنگام تغییر متغیر توجه کنیم ممکن است کران ها تغییر کنند. در اینجا کران پایین از صفر به سه میرود. 
 	 صورت اصلاح شده:
 	 $ \sum_{k=3}^{\infty}\binom{k+1}{k-3} x^k $
 	
 \Nnote{n16}		
 	  در طی پاسخ به سوال خوب است دقت کنیم همه ی اعداد را یا فارسی یا انگلیسی 
-	  بنویسیم. {sec:3} 
+	  بنویسیم.
 	  
 	  
 \solution
@@ -400,7 +389,7 @@ $$\binom{16}{12} (4)^{12}$$
  \notes
  
  \Enote{n17}
-   به هنگام جایگذاری در فرمول باید جایگذاری ها واضح باشد. در این مثال در فرمول (۱) کران پایین از r هست ولی در قسمتی که از آن استفاده شده کران پایین از ۰ است. همین مطلب گویای آن است که به توضیحات بیشتری نیاز هست. {sec:4} 
+   به هنگام جایگذاری در فرمول باید جایگذاری ها واضح باشد. در این مثال در فرمول (۱) کران پایین از r هست ولی در قسمتی که از آن استفاده شده کران پایین از ۰ است. همین مطلب گویای آن است که به توضیحات بیشتری نیاز هست. 
 		
 		عبارت زیر صورت کامل شده این نکته است:
 		\begin{align*}
@@ -476,7 +465,7 @@ A=\sum_{i=0}^{n} i{\binom{n}{i}}^2 \xrightarrow{\times 2} 2A = \sum_{i=0}^{n} i{
 \notes
 
 \Nnote{n18}  باید فرمول و اتحاد های مورد استفاده و رفرنس معتبر آن ‌ذکر شود . به عنوان رفرنس اسم اتحاد هم کافی است. 
- {sec:1}         	 
+       	 
  
  
  \solution*{پاسخ صحیح}
