--- a/h2wp.tex
+++ b/h2wp.tex
@@ -472,5 +472,62 @@ $$ \binom{n}{k}+\binom{n+1}{k}=\binom{n+1}{k+1}$$
 \[\]
 \[\sum_{i=k}^{n} {\binom{i}{k}} =\sum_{i=k}^{n} {\binom{i+1}{k+1}-\binom{i}{k+1}}=\sum_{i=k}^{n} {\binom{i+1}{k+1}}-\sum_{i=k}^{n} {\binom{i}{k+1}}\]\[=\binom{n+1}{k+1}+\sum_{i=k}^{n-1} {\binom{i+1}{k+1}}-(0+\sum_{i=k+1}^{n} {\binom{i}{k+1}})=\binom{n+1}{k+1}+\sum_{i=k}^{n-1} {\binom{i+1}{k+1}}-\sum_{i=k}^{n-1} {\binom{i+1}{k+1}}=\binom{n+1}{k+1}\]
 
+\question
+
+%% question 9
+\question
+
+صفحه‌ای دو بعدی را در نظر بگیرید که از هر دو طرف تا بینهایت ادامه دارد و با دو رنگ آن را رنگ کرده ایم (حتما از هر دو رنگ استفاده شده است).آیا دو نقطه به فاصله d (عدد حقیقی) وجود دارد که هم‌رنگ باشند؟
+
+\solution
+ درستی نقیض خواسته سوال را اثبات می‌کنیم.\\
+حکم سوال : دو نقطه به فاصله $d$ (عدد حقیقی) وجود دارد که هم‌رنگ باشند.\\
+نقیض حکم سوال : وجود دارد دو نقطه به فاصله $d$ که دو رنگ مختلف باشند.\\
+چون در صفحه حتما هر دو رنگ را داریم می‌توان مثلا نقطه $A$ با رنگ ۱ را در نظر بگیریم. به فاصله‌ی $d$ از نقطه $A$ می‌رویم
+( نقطه $B$ ) اگر رنگ $B$ متفاوت با رنگ $A$ باشد که کار تمام است.
+در غیر این صورت
+$ d = d \pm \epsilon $ 
+قرار می‌دهیم و دوباره رنگ آن نقطه را با $A$ مقایسه می‌کنیم این روند را آنقدر ادامه می‌دهیم تا رنگ متفاوت از $A$ یافت شود. واضح است بالاخره به همچین نقطه‌ای خواهیم رسید وگرنه کل صفحه یک رنگ خواهد بود که خلاف صورت سوال است.
+بنابراین نقیض حکم سوال حتما درست است پس حکم سوال غلط است.\\
+
+
+
+ \notes
+
+\Tnote{n19}
+نقیض حکم سوال به نادرستی بیان شده است.فرض کنید P(x,y) هم‌رنگ بودن دو نقطه  x و y باشد. D(x,y) یه فاصله d بودن دو نقطه  x و y باشد.\\
+حکم سوال بیان میکند که : 
+$ \exists (x,y) ( D(x,y) \wedge P(x,y)) $
+\\
+برای نقیض کردن آن داریم:\\
+$ \neg \exists (x,y) ( D(x,y) \wedge P(x,y)) = \forall (x,y) (\neg (D(x,y) \wedge P(x,y)) = \forall (x,y) (\neg D(x,y) \vee \neg P(x,y)) $
+\\
+به صورت فارسی می‌توان گفت : هیج دو نقطه به فاصله‌ی d هم‌رنگ نیستند.
+
+
+ \solution*{پاسخ صحیح}
+ 
+    اصل لانه‌ی کبوتری: به ازای 
+    $n$
+    لانه و 
+    $n+1$
+    کبوتر با فرض اینکه هر کبوتر در یکی از لانه‌ها قرار دارد؛ دو کبوتر وجود دارند که در یک لانه قرار دارند.
+
+    قبل از شروع اثبات اسم رنگ اول را قرمز و رنگ دوم را آبی می‌گذاریم(نام‌گذاری رنگ‌ها).
+
+    حال مثلثی متساوی‌الاضلاع را در نظر بگیرید که اندازه‌ی هر ضلع آن
+    $d$
+    است. بدیهی است که این مثلث را می‌توان در صفحه‌(طبق فرض مسئله صفحه بی‌نهایت است)
+    در نظر گرفت که طبق اصل لانه‌ی کبوتری روی سه نقطه و دو رنگ، دو نقطه از این سه نقطه هم‌ر‌‌نگند.
+    این دو نقطه،
+    دو نقطه به فاصله
+    $d$
+    و هم‌رنگند.
+    
+    
+    
+  %% question 10
+  \question
+  
 
 \end{document}
