--- a/h2wp.tex
+++ b/h2wp.tex
@@ -540,33 +540,47 @@ $$ \binom{n}{k}+\binom{n}{k+1}=\binom{n+1}{k+1}$$
 %% question 2
 \question
 
-صفحه‌ای دو بعدی را در نظر بگیرید که از هر دو طرف تا بینهایت ادامه دارد و با دو رنگ آن را رنگ کرده ایم (حتما از هر دو رنگ استفاده شده است).آیا دو نقطه به فاصله d (عدد حقیقی) وجود دارد که هم‌رنگ باشند؟
+صفحه‌ای دو بعدی را در نظر بگیرید که از هر دو طرف تا بینهایت ادامه دارد و با دو رنگ آن را رنگ کرده‌ایم (حتما از هر دو رنگ استفاده شده است). آیا دو نقطه به فاصله d (عدد حقیقی) وجود دارد که هم‌رنگ باشند؟
 
 \solution
  درستی نقیض خواسته سوال را اثبات می‌کنیم.\\
 حکم سوال : دو نقطه به فاصله $d$ (عدد حقیقی) وجود دارد که هم‌رنگ باشند.\\
 نقیض حکم سوال : وجود دارد دو نقطه به فاصله $d$ که دو رنگ مختلف باشند.\\
-چون در صفحه حتما هر دو رنگ را داریم می‌توان مثلا نقطه $A$ با رنگ ۱ را در نظر بگیریم. به فاصله‌ی $d$ از نقطه $A$ می‌رویم
-( نقطه $B$ ) اگر رنگ $B$ متفاوت با رنگ $A$ باشد که کار تمام است.
-در غیر این صورت
-$ d = d \pm \epsilon $ 
-قرار می‌دهیم و دوباره رنگ آن نقطه را با $A$ مقایسه می‌کنیم این روند را آنقدر ادامه می‌دهیم تا رنگ متفاوت از $A$ یافت شود. واضح است بالاخره به همچین نقطه‌ای خواهیم رسید وگرنه کل صفحه یک رنگ خواهد بود که خلاف صورت سوال است.
-بنابراین نقیض حکم سوال حتما درست است پس حکم سوال غلط است.\\
+دو نقطه با دو رنگ متفاوت را در نظر می‌گیرم. فاصله این دو نقطه $ kd + r $ است به طوری که $ k $ عدد صحیح نامنفی و $ r < k $  است. 
+اگر k بیشتر مساوی یک باشد از نقطه چپ , به اندازه d سمت راست می‌آییم. این نقطه باید همرنگ باشد و این انتقال را آنقدر ادامه می‌دهیم تا $ k = 0 $ شود. حالا به دو نقطه ای رسیده‌ایم که فاصله‌ای کمتر از d دارند و از دو رنگ متفاوت هستند. 
+سپس نقطه سوم به فاصله d از این دو نقطه در نظر می‌گیریم. یک مثلث متساوی الساقین تشکیل می‌شود. بنابراین راس سوم حتما با یکی از دو راس دیگر رنگ متفاوت خواهد داشت. در اینجا ثابت کردیم نقیض حکم سوال درست است پس حکم سوال نادرست می‌باشد. 
+
+
+
+%%درستی نقیض خواسته سوال را اثبات می‌کنیم.\\
+%حکم سوال : دو نقطه به فاصله $d$ (عدد حقیقی) وجود دارد که هم‌رنگ باشند.\\
+%نقیض حکم سوال : وجود دارد دو نقطه به فاصله $d$ که دو رنگ مختلف باشند.\\
+%چون در صفحه حتما هر دو رنگ را داریم می‌توان مثلا نقطه $A$ با رنگ ۱ را در نظر %بگیریم. به فاصله‌ی $d$ از نقطه $A$ می‌رویم
+%( نقطه $B$ ) اگر رنگ $B$ متفاوت با رنگ $A$ باشد که کار تمام است.
+%در غیر این صورت
+%$ d = d \pm \epsilon $ %
+%قرار می‌دهیم و دوباره رنگ آن نقطه را با $A$ مقایسه می‌کنیم این روند را آنقدر %ادامه می‌دهیم تا رنگ متفاوت از $A$ یافت شود. واضح است بالاخره به همچین نقطه‌ای %خواهیم رسید وگرنه کل صفحه یک رنگ خواهد بود که خلاف صورت سوال است.
+%%بنابراین نقیض حکم سوال حتما درست است پس حکم سوال غلط است.\\
 
 
 
  \notes
 
-\Tnote{n19}
-نقیض حکم سوال به نادرستی بیان شده است.فرض کنید P(x,y) هم‌رنگ بودن دو نقطه  x و y باشد. D(x,y) یه فاصله d بودن دو نقطه  x و y باشد.\\
+\Tnote{n21}
+نقیض حکم سوال به نادرستی بیان شده است. فرض کنید P(x,y) هم‌رنگ بودن دو نقطه  x و y باشد. D(x,y) به فاصله d بودن دو نقطه  x و y باشد.\\
 حکم سوال بیان میکند که : 
 $ \exists x,y ( D(x,y) \wedge P(x,y)) $
 \\
 برای نقیض کردن آن داریم:\\
-$ \neg \exists x,y, ( D(x,y) \wedge P(x,y)) = \forall x,y, (\neg (D(x,y) \wedge P(x,y)) = \forall x,y, (\ne\\g D(x,y) \vee \neg P(x,y)) $
+$$ \neg \exists x,y, ( D(x,y) \wedge P(x,y)) = \forall x,y, (\neg (D(x,y) \wedge P(x,y)) = \forall x,y, (\neg D(x,y) \vee \neg P(x,y)) $$
 \\
-به صورت فارسی می‌توان گفت : هیج دو نقطه به فاصله‌ی d هم‌رنگ نیستند.
+به صورت فارسی می‌توان گفت : هیج دو نقطه به فاصله‌ی d هم‌رنگ نیستند.\\
+در صورتی که جمله‌ی ٬وجود دارد دو نقطه به فاصله $d$ که دو رنگ مختلف باشند.٬ به شکل منطقی به صورت زیر نوشته می‌شود:
+$$ \exists x,y, (D(x,y) \wedge \neg P(x,y)) $$ 
+در گزاره‌های منطقی واضح است نقیض کردن اشتباه انجام شده است.\\
 
+\Enote{n22}
+به‌ طور کلی در نظر داشته باشد، توجه به نگرش پایه‌ای و گام به گام منطق در تمامی حل سوالات (حتی مباحث غیرمنطق) به تمیزتر نوشتن و پرهیز از اشتباه کمک می‌کند. یه همین علت مهم و مورد انتظار است.\\
 
  \solution*{پاسخ صحیح}
  
@@ -576,7 +590,7 @@ $ \neg \exists x,y, ( D(x,y) \wedge P(x,y)) = \forall x,y, (\neg (D(x,y) \wedge 
     $n+1$
     کبوتر با فرض اینکه هر کبوتر در یکی از لانه‌ها قرار دارد؛ دو کبوتر وجود دارند که در یک لانه قرار دارند.
 
-    قبل از شروع اثبات اسم رنگ اول را قرمز و رنگ دوم را آبی می‌گذاریم(نام‌گذاری رنگ‌ها).
+    قبل از شروع اثبات اسم رنگ اول را قرمز و رنگ دوم را آبی می‌گذاریم.
 
     حال مثلثی متساوی‌الاضلاع را در نظر بگیرید که اندازه‌ی هر ضلع آن
     $d$
@@ -592,15 +606,16 @@ $ \neg \exists x,y, ( D(x,y) \wedge P(x,y)) = \forall x,y, (\neg (D(x,y) \wedge 
   %% question 3
   \question
 
- درستی یا نادرستی گزاره زیر را اثبات کنید.
-  \begin{align*}
-  (\forall x,p(x)) \rightarrow (\exists y, q(x,y))
-  \end{align*}
- 
+چگونگی اثبات درستی یا نادرستی جمله زیر را توضیح دهید.\\
+ تابع q(x,y) را تعریف می‌کنیم اگر p(x) درست باشد p(x+y) و در غیر این صورت نقیض p(x-y) را نتیجه می‌دهد. 
+  
  
  
  \solution
- با یک مثال , نادرسی گزاره فوق را نشان می‌دهیم.\\
+ 
+ جمله بالا را به صورت یک گزاره منطقی می‌نویسیم.
+  $$  (\forall x,p(x)) \rightarrow (\exists y, q(x,y)) $$
+  حال با یک مثال , نادرستی گزاره فوق را نشان می‌دهیم.\\
  سمت چپ گزاره 
  $(\forall x,p(x))$
  را P
@@ -622,14 +637,23 @@ $ y_1 $
 گزاره فوق نادرست خواهد بود.\\
 
 
- \solution
+ \notes
+ \Tnote{n23}
+ از سورها به نادرستی تعبیر شده است. در عبارت Q سور وجودی داریم. بنابراین نمی‌توان $ y_1 $
+را طوری انتخاب کرد که Q نادرست باشد.
+ 
+
+ \solution*{پاسخ صحیح}
+ 
+ جمله بالا را به صورت یک گزاره منطقی می‌نویسیم.
+  $$  (\forall x,p(x)) \rightarrow (\exists y, q(x,y)) $$
 چون در قسمت سمت چپ از سور عمومی استفاده شده است 
 $ x_1 $
-را طوری می‌یابیم که ناقض P باشد. بنابراین طبق truth-table درستی یا نادرستی Q اهمیتی ندارد .
+را طوری می‌یابیم که ناقض P باشد. بنابراین طبق truth-table درستی یا نادرستی Q اهمیتی ندارد.
 \begin{align*}
  P=False \rightarrow Q= -
 \end{align*}
- در کل گزاره فوق درست است.
+پس در کل گزاره فوق درست است.
 
  
 \end{document}
