--- a/h2wp.tex
+++ b/h2wp.tex
@@ -601,7 +601,9 @@ $$ \exists x,y, (D(x,y) \wedge \neg P(x,y)) $$
     $d$
     و هم‌رنگند.
     
-    
+ \notes
+ 
+ \refnote{n8}   
     
   %% question 3
   \question
@@ -638,6 +640,8 @@ $ y_1 $
 
 
  \notes
+ 
+ \refnote{n22}
  \Tnote{n23}
  از سورها به نادرستی تعبیر شده است. در عبارت Q سور وجودی داریم. بنابراین نمی‌توان $ y_1 $
 را طوری انتخاب کرد که Q نادرست باشد.
