--- a/h2wp.tex
+++ b/h2wp.tex
@@ -480,21 +480,21 @@ $$ \binom{n}{k}+\binom{n}{k+1}=\binom{n+1}{k+1}$$
 \question
 گزاره های زیر همگی درست هستند, با در نظر گرفتن آن‌ها, درستی یا نادرستی گزاره های ۱ و ۲ را بررسی کنید.
 \begin{itemize}
-\item اگر کار نداشته باشم یا پولدار باشم, تفریح می کنم
-\item اگر تفریح بکنم, فیلم می بینم یا بستنی می خورم
-\item بستنی نمی خورم و می خوابم
-\item اگر بخوابم, فیلم نمی بینم
+\item اگر کار نداشته باشم یا پولدار باشم, تفریح می کنم.
+\item اگر تفریح بکنم, فیلم می بینم یا بستنی می خورم.
+\item بستنی نمی خورم و می خوابم.
+\item اگر بخوابم, فیلم نمی بینم.
 \end{itemize}
 گزاره ها:
 \begin{enumerate}
-\item من کار دارم
-\item من پولدار هستم
+\item من کار دارم.
+\item من پولدار هستم.
 \end{enumerate}
 \solution
-چون خوابیدم, فیلم هم ندیدم, پس چون فیلم ندیدم, تفریح هم نکردم, پس طبق شرط اول, من پولدار نیستم و کار دارم
+چون خوابیدم, فیلم هم ندیدم, پس چون فیلم ندیدم, تفریح هم نکردم, پس طبق شرط اول, من پولدار نیستم و کار دارم.
 \notes
-\Nnote{n19} بهتر است برای جلو گیری از اشتباه, از نوشتار منطقی استفاده کرده و فارسی ننویسیم
-\Enote{n20} باید فقط از تبدیلات تعریف شده استفاده کرد و استفاده از تبدیلات دیگر بدون اثبات صحیح نیست
+\Nnote{n19} بهتر است برای جلو گیری از اشتباه, از نوشتار منطقی استفاده کرده و فارسی ننویسیم.
+\Enote{n20} باید فقط از تبدیلات تعریف شده استفاده کرد و استفاده از تبدیلات دیگر بدون اثبات صحیح نیست, مثلا در اینجا فیلم ندیدن مستقیما تفریح نکردن را نتیجه نمی دهد.
 \solution*{پاسخ صحیح}
  
 هر گزاره را با یک حرف نشان می دهیم:
@@ -516,23 +516,23 @@ $$ \binom{n}{k}+\binom{n}{k+1}=\binom{n+1}{k+1}$$
 حال داریم:
 \begin{enumerate}
 \item $\neg t \land u$(فرض) 
-\item $u$(ساده سازی عطفی)
+\item $u$(طبق ۱: ساده سازی عطفی)
 \item $u \implies \neg s$ (فرض)
-\item $\neg s$ (طبق ۳)
+\item $\neg s$ (طبق ۳و۴)
 \item $\neg t$ (طبق ۱: ساده سازی عطفی)
-\item $\neg t \land \neg s$ (طبق ۳و۴ : ترکیب عطفی)
-\item $r\implies s\lor t$
-\item $\neg(s\lor t)\implies \neg r$
-\item $\neg s \land \neg t \implies \neg r$
-\item $neg r$
-\item $q \land \neg p\implies r$
-\item $\neg r \implies \neg(q \lor \neg p)$
-\item $\neg(q \lor \neg p)$
-\item $\neg q \land p$
-\item $\neg q$
-\item $p$
+\item $\neg t \land \neg s$ (طبق ۳و۴: ترکیب عطفی)
+\item $r\implies s\lor t$(فرض)
+\item $\neg(s\lor t)\implies \neg r$(طبق ۷: عکس نقیض)
+\item $\neg s \land \neg t \implies \neg r$(طبق ۸: دمورگان)
+\item $\neg r$(طبق ۶و۹)
+\item $q \land \neg p\implies r$(فرض)
+\item $\neg r \implies \neg(q \lor \neg p)$(طبق ۱۱: عکس نقیض)
+\item $\neg(q \lor \neg p)$(طبق ۱۰و۱۲)
+\item $\neg q \land p$(طبق ۱۳: دمورگان)
+\item $\neg q$(طبق ۱۴: ساده سازی عطفی)
+\item $p$(طبق ۱۴: ساده سازی عطفی)
 
-پس ۱ صحیح و ۲ غلط است
+پس ۱ صحیح و ۲ غلط است.
 \end{enumerate}
 
 
