--- a/h2wp.tex
+++ b/h2wp.tex
@@ -660,4 +660,92 @@ $ x_1 $
 پس در کل گزاره فوق درست است.
 
  
+ \chapter*{ناوردایی}
+ 
+ %%%%%%%%%%%%%%%%%%%%%% question 1 %%%%%%%%%%%%%%%%%%%%%%%%%
+ \question
+ اعداد ۱ تا ۲۰ را روی تخته نوشته ایم. هر بار می‌توانیم دو عدد a, b را از روی تخته پاک کرده و عدد ab + a + b را روی تخته بنویسیم. عدد نهایی روی تخته را بیابید.
+ 
+ 
+ \solution
+ در هربار حاصل ضرب اعداد روی تخته + 1 ثابت است. این عدد برابر  $ 21!$  است. پس عدد نهایی $21! - 1 $  خواهد بود.
+ 
+ 
+ 
+ \notes
+ 
+ 
+  \Nnote 
+ از نوشتن جملات فارسی که ایجاد ابهام می‌کنند بپرهیزید و حتی‌الامکان عبارات را به صورت ریاضی بنویسید.\\
+ از جمله بالا می‌توان 
+ $ a_1 * a_2 * a_3 * ... * a_n + 1 $
+ را تعبیر کرد در صورتی که مقصود 
+ $ (a_1 + 1) * (a_2 + 1) * (a_3 + 1 ) * ... * (a_n + 1) $
+ بوده است.
+ 
+\Tnote
+ اثبات ناوردا بودن یک مقدار از مهم‌ترین موارد مساله‌ها‌ی ناوردایی می‌باشد. در این پاسخ این مورد اثبات نشده است.
+ 
+ 
+ \solution*{پاسخ صحیح}
+  مساله را با ناوردائی حل می‌کنیم. سوال را برای اعداد دلخواه حل کرده سپس اعداد یک تا بیست را در نتیجه‌ی نهایی لحاظ می‌کنیم. فرض می‌کنیم در ابتدای مساله اعداد 
+    $\mathrm{x}_{20}$
+    ,
+    $\mathrm{x}_{19}$
+    ,...,
+    $\mathrm{x}_2$
+    ,
+    $\mathrm{x}_1$
+    را داریم. به ازای هر عدد
+    $\mathrm{x}_{i}$
+    ،
+    $\mathrm{y}_{i}$
+    را به این صورت در نظر می‌گیریم:      
+    $\mathrm{y}_{i} = \mathrm{x}_{i} + 1$\\
+    \\
+    مقدار ناوردا را
+    $\mathrm{S}$
+    در نظر می‌گیریم و آن به صورت زیر تعریف می‌کنیم:
+    \begin{align} \nonumber
+        \mathrm{S} = \mathrm{y}_{1} \times \mathrm{y}_{2} \times \ldots \times \mathrm{y}_{19} \times \mathrm{y}_{20} \nonumber
+    \end{align}
+    ادعا می‌کنیم در هر مرحله با برداشتن دو عدد دلخواه
+    $ \mathrm{a}$
+    و
+    $ \mathrm{b}$
+    و گذاشتن عدد
+    $\mathrm{a + b + ab}$
+    به جای آن، مقدار
+    $\mathrm{S}$
+    ثابت می‌ماند. حال به اثبات آن می‌پردازیم:\\
+    \\
+    فرض می‌کنیم در مرحله‌‌ی اول دو عدد دلخواه
+    $\mathrm{x}_{i}$و $\mathrm{x}_{j}$
+    را انتخاب می‌کنیم و به جای آن
+    $\mathrm{{x}_{i}+{x}_{j}+ {x}_{i}{x}_{j}}$
+    قرار می‌دهیم. این مقدار درواقع معادل
+    $\mathrm{({x}_{i} + 1)({x}_{j} + 1) - 1}$
+    می‌باشد.بدین ترتیب مقدار
+    $\mathrm{S}$
+    که تاکنون برابر
+    $\mathrm{({x}_1 + 1)({x}_2 + 1)\ldots({x}_{20} + 1)}$
+    بوده است؛ به صورت زیر به‌روزرسانی خواهد شد:
+    
+    \begin{align} \nonumber
+        S &= \mathrm{(\prod_{k=1,k\neq i,j}^{20} ({x}_k + 1))((({x}_i + 1)({x}_j + 1)-1)+1)} \\ \nonumber
+        & = \mathrm{(\prod_{k=1,k\neq i,j}^{20} ({x}_k + 1))({x}_i + 1)({x}_j + 1)}\\ \nonumber
+        & =\mathrm{ ({x}_1 + 1)({x}_2 + 1)\ldots({x}_{20} + 1)}    \nonumber 
+    \end{align}    
+    بنابراین در هرگام و با انتخاب هر دو عدد دلخواه، مقدار تعریف شده برای
+    $\mathrm{S}$
+    ثابت خواهد ماند. بدین ترتیب عدد باقیمانده روی تخته برای اعداد یک تا بیست برابر است با:
+    \begin{align} \nonumber
+        \mathrm{(1 + 1)(2 + 1)\ldots(20 + 1) - 1= 21!-1}  \nonumber     
+    \end{align}
+    (از آن‌جایی که مقدار ناوردا بر اساس 
+    $\mathrm{{y}_i}$
+    تعریف شده است. در نهایت مقدار نهایی که براساس
+    $\mathrm{{x}_i}$
+    است، یک واحد از مقدار ناوردا کمتر خواهد بود.)
+    \\
 \end{document}
