--- a/h2wp.tex
+++ b/h2wp.tex
@@ -669,13 +669,12 @@ $ x_1 $
  
  \solution
  در هربار حاصل ضرب اعداد روی تخته + 1 ثابت است. این عدد برابر  $ 21!$  است. پس عدد نهایی $21! - 1 $  خواهد بود.
- 
- 
+ \\
  
  \notes
  
  
-  \Nnote 
+  \Nnote {n24}
  از نوشتن جملات فارسی که ایجاد ابهام می‌کنند بپرهیزید و حتی‌الامکان عبارات را به صورت ریاضی بنویسید.\\
  از جمله بالا می‌توان 
  $ a_1 * a_2 * a_3 * ... * a_n + 1 $
@@ -683,11 +682,12 @@ $ x_1 $
  $ (a_1 + 1) * (a_2 + 1) * (a_3 + 1 ) * ... * (a_n + 1) $
  بوده است.
  
-\Tnote
+\Tnote{n25}
  اثبات ناوردا بودن یک مقدار از مهم‌ترین موارد مساله‌ها‌ی ناوردایی می‌باشد. در این پاسخ این مورد اثبات نشده است.
  
  
  \solution*{پاسخ صحیح}
+ \\
   مساله را با ناوردائی حل می‌کنیم. سوال را برای اعداد دلخواه حل کرده سپس اعداد یک تا بیست را در نتیجه‌ی نهایی لحاظ می‌کنیم. فرض می‌کنیم در ابتدای مساله اعداد 
     $\mathrm{x}_{20}$
     ,
@@ -747,5 +747,41 @@ $ x_1 $
     تعریف شده است. در نهایت مقدار نهایی که براساس
     $\mathrm{{x}_i}$
     است، یک واحد از مقدار ناوردا کمتر خواهد بود.)
+    \\
+    
+    
+    %%%%%%%%%%%%%%%%%%%%%%%% question 2 %%%%%%%%%%%%%%%%%
+    \question
+    در یک ردیف ۲۰۰۰ عدد نوشته شده است. فرض کنید به ازای هر عدد a در این دنباله، f(a) برابر با تعداد دفعاتی باشد که a در دنباله آمده است. در هر مرحله به ازای هر عضوی از دنباله مثل x مقدار f(x) را زیر آن می‌نویسیم تا یک دنباله ۲۰۰۰ تایی جدید حاصل شود. آیا می‌توان این دنباله را تا ابد ادامه داد به‌ظوری که هیچ دو دنباله متوالی باهم برابر نباشند؟
+    
+    
+    \solution
+    خیر این حالت امکان‌پذیر نیست. چون لازم است تعداد اعداد تکرار شده در هر مرحله باهم متفاوت باشد و پس از گذر از چند مرحله این امکان از بین می‌رود.
+   \\
+    \notes
+    \Tnote{n26}
+    استدلال فوق شهودی است و شهود به هیچ غنوان ارزش ریاضی ندارد.
+    
+   
+   \solution*{پاسخ صحیح}  
+   \\
+   با ناوردایی مساله را حل می‌کنیم. مقدار ناوردا در این مساله، تعداد جملات متمایز و متفاوت است. اولین دنباله‌ی جدید ایجاد شده را در نظر بگیرید.
+    در این دنباله به تعداد عددهایی که در دنباله‌ی قبلی
+    $\mathrm{i}$
+    بار آمده‌بودند، جمله با مقدار
+    $\mathrm{i}$
+    داریم. یعنی اگر در دنباله‌ی قبلی
+    $\mathrm{x}$
+    عدد داشتیم، که هر یک
+    $\mathrm{i}$
+    بار تکرار شده باشند، در دنباله‌ی جدید،
+    $\mathrm{x \times i}$
+    جمله با مقدار
+    $\mathrm{i}$
+    خواهیم داشت. بدین ترتیب در هرگام تعداد جملات متمایز موجود در دنباله همواره کاهش می‌یابد.
+     اگر زمانی باشد که این تعداد ثابت بماند، دنباله در مرحله‌ی بعد و دومرحله‌ بعد آن یکسان خواهند بود و مساله حل است. در غیر این صورت یک تابع ناوردای کاهشی داریم.
+    از طرفی کران گام نیز داریم. چون تعداد عدد صحیح می‌باشد، این کران یک خواهد بود. هم‌چنین چون مقدار ناوردای کاهشی داریم و همواره در طی گام‌ها
+    مقدار ناوردای انتخابی کم می‌شود و کران پایین هم داریم (تعداد جملات در کمترین حالت ممکن می‌توانند صفر باشند.)؛ بالاخره به نقطه‌ای خواهیم رسید
+    که تعداد جملات متمایز یک خواهد بود و تمام جملات دنباله یکسان می‌شوند و از آن پس دیگر دنباله‌ی متمایز نخواهیم داشت. 
     \\
 \end{document}
