--- a/h2wp.tex
+++ b/h2wp.tex
@@ -784,4 +784,93 @@ $ x_1 $
     مقدار ناوردای انتخابی کم می‌شود و کران پایین هم داریم (تعداد جملات در کمترین حالت ممکن می‌توانند صفر باشند.)؛ بالاخره به نقطه‌ای خواهیم رسید
     که تعداد جملات متمایز یک خواهد بود و تمام جملات دنباله یکسان می‌شوند و از آن پس دیگر دنباله‌ی متمایز نخواهیم داشت. 
     \\
+\question
+ثابت کنید ۱۰۰۰۰۰ عدد طبیعی متوالی می توان یافت که در بین آن‌ها دقیقا ۵ عدد اول وجود دارد.
+\solution
+
+بله می توان یافت.
+اعداد ۱ تا ۱۰۰۰۰۰ را در نظر بگیرید, بین این اعداد بیشتر از ۵ عدد اول وجود دارد.\\ حال دنباله اعداد
+\[100000!, 100000!+1,100000!+2 ,..., 100000!+99999\]
+را در نظر بگیرید, این دنباله حداکثر ۱ عدد اول دارد بنابراین قطعا بین این دنباله و دنباله اعداد ۱ تا ۱۰۰۰۰۰ دنباله‌ای وجود دارد که دقیقا ۵ عدد اول دارد.
+\notes
+\Enote{n35}
+نتیجه گیری نهایی نیاز به اثبات دارد.
+\solution*{پاسخ صحیح}
+
+بله می توان یافت.
+اعداد ۱ تا ۱۰۰۰۰۰ را در نظر بگیرید, بین این اعداد حداقل ۶ عدد اول وجود دارد.(2,3,5,7,11,13)\\ حال دنباله اعداد
+\[100000!, 100000!+1,100000!+2 ,..., 100000!+99999\]
+را در نظر بگیرید, این دنباله حداکثر ۱ عدد اول دارد.
+حال از دنباله اولیه شروع می کنیم و در هر گام, کوچک‌ترین عدد دنباله را حذف کرده و عدد بعد از بزرگ‌ترین عدد را به آن اضافه می کنیم. در هر گام تعداد اعداد اول دنباله حداکثر یک واحد تغییر می کند. بنابر این چون در ابتدا دنباله بیش از ۵ عدد اول و در زمان رسیدن به دنباله دوم, حداکثر ۱ عدد اول دارد, دنباله ای در این گام ها وجود دارد که دقیقا ۵ عدد اول دارد.
+\question
+سه دسته سنگریزه داریم که به ترتیب شامل ۱۱، ۱۸۵ و ۱۸۹ سنگریزه هستند. در هر حرکت می توانیم دو دسته از سنگریزه‌ها را با هم ترکیب کرده و یا یک دسته که تعداد زوجی سنگریزه دارد را به دو دسته با تعداد سنگریزه‌های یکسان تقسیم کنیم. 
+آیا می‌توان در نهایت به ۳۸۵ دسته برسیم که هر کدام ۱ سنگریزه دارند؟
+\solution
+
+مشاهده می شود که برای این که به دسته های با یک سنگریزه برسیم, باید تعداد سنگریزه دسته ها مقسوم علیه مشترک بزرگتر از ۱ نداشته باشند زیرا مقسوم علیه مشترک در اینجا یک ناوردا است. در مورد این دسته ها هم این موضوع صدق می کند, 
+پس می توان این تقسیم را انجام داد.
+\notes
+\Enote{n36} اثبات ثابت بودن مقدار ناوردا ضروری است
+\Tnote{n37} توجه کنید که مقسوم علیه مشترک بیشتر از یک نداشتن دسته ها, شرط لازم برای برقراری حکم است اما کافی نیست, بنابرین نمی توان از آن برای اثبات درست بودن حکم استفاده کرد. 
+\solution*{پاسخ صحیح}
+
+ برای شروع، از آن‌جایی که تعداد سنگ‌ها در تمامی دسته‌ها فرد است، فقط اجازه داریم که دو دسته را انتخاب کرده آن‌ها را با هم ترکیب کنیم.
+    بر این اساس، سه حالت پیش می‌آید.
+    \begin{enumerate}
+        \item 
+        دسته‌ی ۱۸۵ و ۱۸۹تایی را جهت ترکیب شدن انتخاب کنیم. در این صورت با اجرای مرحله‌ی اول دو دسته‌ی ۳۷۴تایی و ۱۱تایی خواهیم داشت.
+        \item 
+        دسته‌ی ۱۱ و ۱۸۵تایی را انتخاب کنیم. دو دسته‌ی نهایی باقی‌مانده ۱۹۶تایی و ۱۸۹تایی خواهند بود.
+        \item
+        دسته‌ی ۱۸۹تایی و ۱۱تایی را برگزینیم. در نهایت دو دسته‌ی ۲۰۰تایی و ۱۸۵تایی خواهیم داشت.
+    \end{enumerate}
+    
+    مساله را با ناوردایی حل می‌کنیم. عددی مانند
+    $c$
+    را در نظر می‌گیریم.
+    مقدار ناوردا را در هر حالت باقی‌مانده‌ی تقسیم تعداد سنگ‌ریزه‌های موجود در هر دسته بر
+    $c$
+    در نظر می‌گیریم.
+    اثبات می‌کنیم اگر عددی وجود داشته باشد که باقی‌مانده‌ی تعداد دسته‌های اولیه بر آن برابر صفر باشد، این باقی‌مانده در تمامی مراحل همچنان صفر خواهد ماند.
+    فرض کنید
+    $c$ یک عدد اول باشد
+    ادعا می‌کنیم که اگر عدد اولی با چنین شرایطی یافت شود، با هر مرحله تقسیم و ترکیب دسته‌ها باز هم می‌تواند تعداد سنگ‌ریزه‌های موجود در هر دسته بشمارد.
+    (این بدان معنی است که تعداد سنگ‌ریزه‌های موجود در هر دسته بر عدد اول پیدا شده بخش‌پذیر باشد.)
+    حال به اثبات ادعای خود می‌پردازیم:\\
+    طبق نظریه‌ی اعداد، دو حالت زیر را به ازای عدد اول 
+    $\mathrm{P|P>2}$
+    برقرار است.
+    \begin{enumerate}
+        \item 
+        در صورتیکه
+        $\mathrm{P}$
+        بتواند هر دو دسته‌ي 
+        $\mathrm{a}$
+        و
+        $\mathrm{b}$
+         را بشمارد، ترکیب آن دو را نیز می‌تواند بشمارد.
+        \begin{align} 
+            if\; P|a\;\& P|b \to P|a+b \\ \nonumber
+        \end{align}
+        \item 
+        در صورتیکه
+        $\mathrm{P}$
+        بتواند دسته‌اي با تعداد عضو زوج مثل 
+        $\mathrm{2c}$
+         را بشمارد، نصف آن را نیز می‌تواند بشمارد.
+        \begin{align} 
+            if\;P|2c \to P|c \\ \nonumber
+        \end{align}
+    \end{enumerate}
+    مجددا تاکید شود که رابطه‌ی ۵ و ۶ به ازای عدد اول بزرگ‌تر از ۲ برقرار است.\\
+    بنابراین باقی‌مانده‌ی تعداد سنگ‌ریزه‌های هر دسته بر عددی مانند
+    $c$
+    با شرایط فوق، همواره صفر خواهد ماند و ثابت است.
+    حال با توجه به این اثبات کافیست برای هر یکی از سه حالت بالا، عدد اولی بیابیم که هر دو دسته را بتواند بشمارد.
+    در صورتی‌که چنین چیزی ممکن باشد، تعداد سنگ‌ریزه‌های موجود در هردسته در هریکی از حالات کران پایین خواهد داشت و به ازای هر گام، تعداد سنگ‌ریزه‌هایش همواره بزرگ‌تر مساوی آن کران خواهد بود؛
+    که این کران همان عدد اول پیدا شده است.\\
+    برای حالت اول، عدد ۱۱، در حالت دوم، عدد ۷ و در حالت سوم، عدد ۵، سه عدد اول بزرگ‌تر از ۲ هستند که می‌توانند تعداد سنگ‌ریزه‌های موجود در هردودسته را بشمارند.
+    بدین ترتیب تعداد سنگ‌ریزه‌های موجود در هر دسته‌‌ی ایجاد شده هیچ‌گاه از عدد اول شمارنده‌ی آن کمتر نخواهد شد.
+    پس هیچ‌گاه نمی‌توانیم ۱۸۱ دسته سنگ‌ریزه داشته باشیم که هریک فقط یک سنگ‌ریزه داشته باشد.\\
+
 \end{document}
